# iot-protocol-hubstry

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.pt.md  DOCUMENTACAO_IMPLEMENTACOES.md  Dockerfile.production  LICENSE  README.md  README.pt.md  README_DASHBOARD.md  ROADMAP.md  ROADMAP.pt.md  SECURITY.md  SECURITY.pt.md  dashboard.py  docker-compose.dev.yml  docker-compose.production.yml  linkedin-article.md  requirements.txt
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  markdown-link-check.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  cpp-build.yml  demo-deploy.yml  docs-validation.yml  performance-testing.yml  release.yml  security-enhanced.yml  security.yml
.kiro/specs/enterprise-compliance/: design.md  requirements.md  tasks.md
.kiro/specs/production-readiness/: design.md  requirements.md  tasks.md
.kiro/specs/quantum-security/: requirements.md
.kiro/specs/repository-enhancement/: design.md  requirements.md  tasks.md
compliance/gdpr/: data_anonymization.py
cybersecurity/: README.md
cybersecurity/attack-vectors/: README.md
cybersecurity/compliance/: README.md
cybersecurity/hsl/: README.md
cybersecurity/post-quantum/: README.md
demo-web/harmonic-demo/: .vercelignore  Dockerfile  netlify.toml  package-lock.json  package.json  vercel.json
demo-web/harmonic-demo/src/app/: layout.tsx  page.tsx
demo-web/harmonic-demo/src/components/: DeviceSimulator.tsx  HarmonicVisualizer.tsx  ProtocolMetrics.tsx
docs/: PRD.md  Tests.md  architecture.md
docs/en/: .gitkeep  PQC-Security-Guide.md  PRD.md  Tests.md
docs/pt/: .gitkeep  Guia-Seguranca-PQC.md  PRD.md  Tests.md
hale_core/: __init__.py  hale_equation.py  psi_functions.py
hpg_core/: __init__.py  hpm_config.py  omnigrid.py  signal_processing.py  spectral_verification.py
monitoring/: prometheus.yml
monitoring/sla/: uptime_monitor.py
nginx/: nginx.conf
postgres/init/: 01-schema.sql
scripts/: lint.sh  setup.sh  validate.sh
sdk/raspberry-pi/: requirements.txt
sdk/raspberry-pi/harmonic_iot/: __init__.py  device.py
security/: __init__.py  hsl_auth.py  intrusion_detection.py  key_rotation.py
server/: Dockerfile  lighthouse.config.js  package.json
server/prisma/: schema.prisma  seed.ts
server/prisma/migrations/20260420000000_init/: migration.sql
server/src/: index.ts
server/src/routes/: devices.ts  harmonic.ts  health.ts
server/tests/performance/: harmonic-protocol-test.js  load-test.js  stress-test.js
src/: CMakeLists.txt  README.md  main.cpp
src/security/: secure_config.cpp  secure_config.h
tests/performance/: load-test.js
